heroku deploy after test finishes

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ before_install:
 
 script:
   - docker run apheliont:ci-test npm run test -- --coverage
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: "3f9b8af2-c82b-468c-a9eb-ea8be2aac2ae"
