--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,6 +2,11 @@ FROM node
 
 WORKDIR /app
 
-RUN npx create-react-app .
+COPY ./package.json .
+
+RUN npm install
+
+COPY ./public .
+COPY ./src .
 
 CMD ["npm", "run", "test"]
