--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,7 +6,7 @@ COPY ./package.json .
 
 RUN npm install
 
-COPY ./public .
-COPY ./src .
+COPY ./public ./public
+COPY ./src ./src
 
 CMD ["npm", "run", "test"]
